--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "@xenova/transformers": "^2.17.2",
+    "axios": "^1.8.3",
+    "jspdf": "^3.0.0",
+    "openai": "^4.87.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
-    "tailwindcss": "^4.0.12"
+    "sweetalert2": "^11.17.2",
+    "tailwindcss": "^4.0.12",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
