--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.0.12",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.8.3",
+    "chart.js": "^4.4.8",
     "jspdf": "^3.0.0",
     "openai": "^4.87.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
